# Agentic-AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  notebook_for_testing.ipynb  pyproject.toml
src/api/: api_setup.py
src/core/: TEST.ipynb  agents.py  compile.py  core_setup.py  db_logging.py  define_state.py  define_state_and_llm.py  run.py  tools.py  workflow.py
src/frontend/: Agentic_Refinance_Tool.py  client.py
src/frontend/pages/: 1_Agent_Workflow_Details.py  1_Technical_Details.py  2_AWS_Architecture_Diagram.py  3_Project_Inspiration.py
src/prompts/: finalizer_prompt.txt
src/schedule/: lambda_function.py
tests/: test_api_server.py  test_tools.py
